made a content container for StoryCard to fix spacing

--- a/src/components/Story/Stories.css
+++ b/src/components/Story/Stories.css
@@ -9,15 +9,19 @@
 }
 
 .scroll-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
   background: url('../../../public/scroll-background.png');
   background-size: contain;
   background-repeat: no-repeat;
   height: 300px;
   width: calc(300px * (720 / 900));
+}
+
+.content-container {
+  padding-top: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .scroll-div h3,
@@ -26,7 +30,8 @@ p {
 }
 
 .scroll-div h3 {
-  padding-top: 8%;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .scroll-div p::after {
